<resources>
    <string name="app_name">My Movie Manager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="go_button">Go</string>
    <string name="suggestions">Suggestions</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="result">Results</string>
    <string name="sort">Sort By: </string>
    <string name="hint">Search for a movie, artist or genre</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="rate">Rate</string>
    <string name="interested">I\'m interested</string>
    <string name="not_interested">I\'m not interested</string>

    <!-- Profile Strings -->
    <string name="profile_top_movies">Movies I Liked The Most</string>
    <string name="profile_bottom_movies">Movies I Won\'t Watch</string>
    <string name="profile_todo_movies">Movies I Will Watch</string>
    <string name="profile_top_tags">Most Liked Categories</string>
    <string name="profile_bottom_tags">Most Hated Categories</string>
    <string name="title_activity_movie">MovieActivity</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
</resources>
