<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="comp.mymoviemanager.ProfileActivity">

    <!-- TODO: Styling -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:id="@+id/ll_profile_personal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/profile_photo"
                android:layout_toLeftOf="@+id/profile_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/profile_name"
                android:layout_toRightOf="@+id/profile_photo"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/label_profile_top_movies"
            android:text="@string/profile_top_movies"/>

        <!-- Insert here horizontal scrollable list -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/label_profile_bottom_movies"
            android:text="@string/profile_bottom_movies"/>

        <!-- Insert here horizontal scrollable list -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/label_profile_todo_movies"
            android:text="@string/profile_todo_movies"/>

        <!-- Insert here horizontal scrollable list -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/label_profile_top_tags"
            android:text="@string/profile_top_tags"/>

        <!-- Insert here horizontal scrollable list -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/label_profile_bottom_tags"
            android:text="@string/profile_bottom_tags"/>

        <!-- Insert here horizontal scrollable list -->

    </LinearLayout>

</RelativeLayout>
