<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_floating_material_dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:src="@drawable/search_icon"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingLeft="50dp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/goButton"
            android:textColor="#ffffff"
            android:hint="@string/hint"
            android:textSize="16sp"
            android:textColorHint="#ffffff"/>
        <Button
            android:text="@string/go_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/goButton"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/result"
            android:textColor="#ffffff"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="10dp"
            android:text="@string/sort"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_weight="1" />


    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ScrollView>
</LinearLayout>