<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#484848"
    android:id="@+id/main_search">

    <include layout="@layout/toolbar"/>
    <!--@color/background_floating_material_dark-->
<!--
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:src="@drawable/search_icon"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingLeft="50dp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/goButton"
            android:textColor="#ffffff"
            android:hint="Search for a movie, artist or genre"
            android:textSize="16dp"
            android:textColorHint="#ffffff"
            android:id="@+id/search"/>
        <Button
            android:text="@string/go_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/goButton"/>

    </RelativeLayout>
    -->
    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#2e2e2e">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:id="@+id/home_action"
            android:background="@drawable/homeicon"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:layout_gravity="center"
            android:layout_marginRight="30dp"
            android:id="@+id/profile_action"
            android:background="@drawable/profileicon"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:background="@drawable/favorite"/>

        <SearchView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search"
            android:searchIcon="@drawable/search"
            >

        </SearchView>

    </LinearLayout>
    -->
<!--Comment-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/suggestions"
                android:textColor="#ffffff"
                android:textSize="24dp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_gravity="center"
                android:visibility="gone" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/suggestionView">
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/suggestionViewText">
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/popular"
                android:textColor="#ffffff"
                android:textSize="24dp"/>

            <ProgressBar
                android:id="@+id/progressBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_gravity="center"
                android:visibility="gone" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/popularView">
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/popularViewText">
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/top_rated"
                android:textColor="#ffffff"
                android:textSize="24dp"/>

            <ProgressBar
                android:id="@+id/progressBar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_gravity="center"
                android:visibility="gone" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/topRatedView">
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/topRatedViewText">
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/upcoming"
                android:textColor="#ffffff"
                android:textSize="24dp"/>

            <ProgressBar
                android:id="@+id/progressBar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_gravity="center"
                android:visibility="gone" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/upcomingView">
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/upcomingViewText">
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>